--- a/aula 04/style.css
+++ b/aula 04/style.css
@@ -1,7 +1,13 @@
 @charset "utf-8";
 
 *{
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background-color: lightslategrey;
 }
 
 header{
@@ -38,4 +44,18 @@ menu a:hover{
 
 header img{
     cursor: pointer;
+}
+
+header p{
+    color: white;
+    text-align: center;
+    background-color: #505050;
+}
+
+main{
+    width: 80vw;
+    padding: 13px;
+    margin: auto;
+    border-radius: 8px;
+    background-color: white;
 }
