--- a/aula 10/style.css
+++ b/aula 10/style.css
@@ -6,120 +6,103 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    background-color: #9e9c1ea9;
+html{
+    background-color: burlywood;
 }
 
 main{
+    padding: 20px;
     width: 60vw;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 50px;
     background-color: white;
-    padding: 25px;
     border-radius: 15px;
-    box-shadow: 2px 2px 3px #0000007a;
-
-    position: relative;
+    box-shadow: 2px 2px 3px #00000065;
+}
+p{
+    text-align: justify;
 }
 
-p a{
+main a{
     color: black;
     text-decoration: none;
-    font-weight: 600;
 }
 
 #perfil{
-    width: 180px;
-    height: 180px;
+    width: 150px;
+    height: 160px;
     border-radius: 50%;
-    display: inline-block;
-
+    margin-left: -3%;
 }
 
-p{
-    display: inline-block;
-    text-align: justify;
-    line-height: 25px;
-    margin: 10px;
+div{
+    position: relative;
+}
 
+div img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+div a{
+    text-decoration: none;
+    
     position: absolute;
 
-    top: 15%;
-    left: 28%;
-}
-
-a img{
-    margin-top: 12px;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-}
-
-
-
-section a{
-    display: block;
-    text-decoration: none;
-    color: black;
-}
-
-@media screen and (max-width: 768px){
-    
-
-    #perfil{
-        display: block;
-        margin: 10px;
-
-    }
-
-    p{
-        margin-left: 20px;
-        position: static; 
-    }
-
-    a img{
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 992px){
-
-    #perfil{
-        display: block;
-        margin: 10px;
-
-    }
-
-    p{
-        margin-left: 20px;
-        position: static; 
-    }
-
-    a img{
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-    }
-    
+    top: 18px;
+    left: 35px;
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
+
     #perfil{
-        display: block;
-        margin: 10px;
-
+        width: 150px;
+        height: 160px;
+        margin-left: -10px;
     }
 
-    p{
-        margin-left: 20px;
-        position: static; 
+    main{
+        position: relative;
     }
 
-    a img{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
+    main p{
+        margin-left: 12px;
+        padding: 25px;
+        position: absolute;
+
+        top: 5%;
+        left: 22%;
     }
+
+  
+
+    
+}
+
+@media screen and (min-width: 1200px) {
+
+    #perfil{
+        display: inline-block;
+
+        width: 150px;
+        height: 160px;
+        margin-left: -10px;
+    }
+
+    main{
+        position: relative;
+    }
+
+    main p{
+        padding: 15px;
+        position: absolute;
+
+        top: 10%;
+        left: 22%;
+    }
+
+    
 }
